# wtffmpeg

./: .gitignore  README.md  example.env  pyproject.toml  wtffmpeg.py
